Update 13.5: add image deletion; make image deleting & uploading transactional; control filesystem modification along with database transaction